Fix button spacing

--- a/src/app.sass
+++ b/src/app.sass
@@ -43,6 +43,9 @@ body
   li
     display: inline-block
 
+    &:last-child a
+      margin-right: 0
+
     a
       background: #f8bd46
       color: #3C475A
@@ -51,15 +54,9 @@ body
       margin-bottom: 9px
       text-decoration: none
       font-size: 1.1em
+      margin-right: 8px
 
 @media only screen and (max-width: 425px)
   body
     padding: 15px
     text-align: center
-
-  .btn-group
-    display: block
-
-    li
-      margin-left: 5px
-      margin-right: 5px
